olive-tin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: olivetin
        image: docker.io/jamesread/olivetin:2025.7.29
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
          requests:
            cpu: "50m"
            memory: "100Mi"
        ports:
        - containerPort: 1337
        volumeMounts:
        - name: config-file
          mountPath: /config
          readOnly: true
        - name: secret-file
          mountPath: /home/olivetin/.ssh
          readOnly: true
        livenessProbe:
            exec:
              command: 
                - curl 
                - localhost:1337
            initialDelaySeconds: 30
            periodSeconds: 300
      volumes:
      - name: config-file
        configMap:
          name: map
      - name: secret-file
        secret:
          secretName: secret
          items:
          - key: id_ed25519
            path: id_ed25519
          - key: id_ed25519.pub
            path: id_ed25519.pub
          - key: known_hosts
            path: known_hosts
